--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
-	"comments": false,
 	"presets": [
 		[
-			"es2015", {
+			"env", {
 				"modules": false
 			}
 		]
 	],
-	"plugins": ["external-helpers"]
+	"plugins": ["external-helpers"],
+	"comments": false
 }
