--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@vanruesc/grunt-esdoc",
 	"version": "0.0.2",
 	"description": "Integrates ESDoc into your Grunt build setup.",
-	"homepage": "https://github.com/vanruesc/vanruesc-grunt-esdoc",
-	"main": "tasks/grunt-esdoc.js",
+	"name": "grunt-plugin-esdoc",
+	"homepage": "https://github.com/vanruesc/grunt-plugin-esdoc",
+	"main": "tasks/grunt-plugin-esdoc.js",
 	"module": "src/index.js",
 	"license": "Zlib",
 
@@ -22,11 +22,11 @@
 
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/vanruesc/vanruesc-grunt-esdoc.git"
+		"url": "https://github.com/vanruesc/grunt-plugin-esdoc.git"
 	},
 
 	"bugs": {
-		"url": "https://github.com/vanruesc/vanruesc-grunt-esdoc/issues"
+		"url": "https://github.com/vanruesc/grunt-plugin-esdoc/issues"
 	},
 
 	"files": [
