--- a/package.json
+++ b/package.json
@@ -50,9 +50,8 @@
 	},
 
 	"devDependencies": {
-		"babel-core": "6.x.x",
-		"babel-plugin-external-helpers": "6.x.x",
-		"babel-preset-env": "1.x.x",
+		"@babel/core": "6.x.x",
+		"@babel/preset-env": "1.x.x",
 		"esdoc-standard-plugin": "1.x.x",
 		"eslint-config-delta": "0.x.x",
 		"grunt": "1.x.x",
@@ -61,7 +60,7 @@
 		"grunt-rollup": "9.x.x",
 		"jit-grunt": "0.x.x",
 		"load-grunt-config": "0.x.x",
-		"rollup-plugin-babel": "3.x.x"
+		"rollup-plugin-babel": "4.x.x"
 	},
 
 	"peerDependencies": {
