--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
+
 	"presets": [
-		[
-			"env", {
-				"modules": false
-			}
-		]
+		["@babel/preset-env", {
+			"modules": false
+		}]
 	],
-	"plugins": ["external-helpers"],
+
 	"comments": false
+
 }
